backend-25 fixed dao